# TrackMAE

./: .gitignore  INSTALL.md  LICENSE  README.md  convert_new_to_old.py  cuda_prefetcher.py  datasets.py  engine_for_finetuning.py  engine_for_pretraining.py  engine_for_pretraining_cotracker.py  kinetics.py  masking_generator.py  modeling_finetune.py  modeling_pretrain.py  optim_factory.py  pyproject.toml  requirements.txt  run_class_finetuning.py  run_mae_pretraining.py  run_trackmae_pretraining.py  ssv2.py  transforms.py  utils.py
clip/: __init__.py
cotrackerv3/: models.py
