[project]
name = "trackmae"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "decord==0.6.0",
  "einops==0.8.1",
  "importlib-metadata==8.0.0",
  "jaraco.collections==5.1.0",
  "opencv-python==4.11.0.86",
  "pandas==2.3.0",
  "pip-chill==1.0.3",
  "scikit-image==0.25.2",
  "tensorboard==2.19.0",
  "tensorboardx==2.6.2.2",
  "timm==1.0.15",
  "tomli==2.0.1",
  "torch==2.7.0",
  "torchmetrics==1.7.3",
  "torchvision==0.22.0",
  "wandb==0.19.11",
]
